# speechsphagetti

./: .gitignore  BUILDING.md  CHANGELOG.md  CLICK_ME_IF_YOUR_ON_LINUX.sh  CLICK_ME_IF_YOUR_ON_WINDOWS.bat  CMakeLists.txt  CONTRIBUTING.md  DOWNLOAD_INSTRUCTIONS.md  GPU_SUPPORT.md  HOW_USERS_INSTALL_THIS.md  LICENSE  MODELS.md  MODEL_MANAGEMENT_GUIDE.md  PHASE2_COMPLETION_REPORT.md  PROJECT_STRUCTURE.txt  README.md  README_GITHUB.md  RELEASE_CHECKLIST.md  START_HERE.md  START_HERE.txt  TESTING_CHECKLIST.md  WINDOWS_BUILD.md  build.sh  build_windows.bat  package_deb.sh  project_tree.txt  run.sh  speech-recorder_1.0.0_amd64.deb  📖_READ_THIS_FIRST_📖.txt
packaging/: speech-recorder.desktop
packaging/debian/: control
resources/: resources.qrc
resources/styles/: dark_theme.qss  light_theme.qss
src/: AudioRecorder.cpp  AudioRecorder.h  MainWindow.cpp  MainWindow.h  TranscriptionWorker.cpp  TranscriptionWorker.h  WhisperTranscriber.cpp  WhisperTranscriber.h  main.cpp
src/gui/: ModelManager.cpp  ModelManager.h  ModelSelector.cpp  ModelSelector.h  SettingsDialog.cpp  SettingsDialog.h
src/transcription/: VoskEngine.cpp  VoskEngine.h
src/utils/: ErrorHandler.cpp  ErrorHandler.h  FileExporter.cpp  FileExporter.h  Settings.cpp  Settings.h
